--- a/cookbooks/fundamentals/templates/default/sv-fundamentals-run.erb
+++ b/cookbooks/fundamentals/templates/default/sv-fundamentals-run.erb
@@ -1,3 +1,3 @@
 #!/bin/sh
 cd <%= @options[:path] %>
-exec chpst -u nobody bundle exec showoff serve
+exec chpst -u nobody bundle exec showoff serve 2>&1
