--- a/cookbooks/knife-workstation/templates/default/vncserver.init.erb
+++ b/cookbooks/knife-workstation/templates/default/vncserver.init.erb
@@ -15,7 +15,7 @@ DISPLAY="1"
 DEPTH="16"
 GEOMETRY="1280x1024"
 NAME="vnc-server"
-OPTIONS="-name ${NAME} -depth ${DEPTH} -geometry ${GEOMETRY} :${DISPLAY}"
+OPTIONS="-name ${NAME} -depth ${DEPTH} -geometry ${GEOMETRY} :${DISPLAY} -ZlibLevel=9"
 
 case "$1" in
     start)
